# ssmsd

./: .gitignore  .gitmodules  AppConnector.cpp  AppConnector.hpp  BroadcastService.cpp  BroadcastService.hpp  CMakeLists.txt  DBHelper.cpp  DBHelper.hpp  DataExchangeServer.cpp  DataExchangeServer.hpp  README.md  SensorConnector.cpp  SensorConnector.hpp  SensorData.cpp  SensorData.hpp  ServerHelper.cpp  ServerHelper.hpp  Zeroconf.cpp  Zeroconf.hpp  build_debian.sh  db_helper.cpp  db_helper.hpp  generate_package_debian.sh  sensor.cpp  server.cpp
package/: CMakeLists.txt
package_deb/lib/systemd/system/: ssmsd.service
package_rpm/: CMakeLists.txt
package_rpm/lib/systemd/system/: ssmsd.service
